2.1.14
 * Replace sstables on DataTracker before marking them as non-compacting during anti-compaction (CASSANDRA-11548)
 * Checking if an unlogged batch is local is inefficient (CASSANDRA-11529)
 * Fix paging for COMPACT tables without clustering columns (CASSANDRA-11467)
 * Fix out-of-space error treatment in memtable flushing (CASSANDRA-11448)
 * Backport CASSANDRA-10859 (CASSANDRA-11415)
 * COPY FROM fails when importing blob (CASSANDRA-11375)
 * Backport CASSANDRA-10679 (CASSANDRA-9598)
 * Don't do defragmentation if reading from repaired sstables (CASSANDRA-10342)
 * Fix streaming_socket_timeout_in_ms not enforced (CASSANDRA-11286)
 * Avoid dropping message too quickly due to missing unit conversion (CASSANDRA-11302)
 * COPY FROM on large datasets: fix progress report and debug performance (CASSANDRA-11053)
 * InvalidateKeys should have a weak ref to key cache (CASSANDRA-11176)
 * Don't remove FailureDetector history on removeEndpoint (CASSANDRA-10371)
 * Only notify if repair status changed (CASSANDRA-11172)
 * Add partition key to TombstoneOverwhelmingException error message (CASSANDRA-10888)
 * Use logback setting for 'cassandra -v' command (CASSANDRA-10767)
 * Fix sstableloader to unthrottle streaming by default (CASSANDRA-9714)
 * Fix incorrect warning in 'nodetool status' (CASSANDRA-10176)
 * Properly release sstable ref when doing offline scrub (CASSANDRA-10697)
 * Improve nodetool status performance for large cluster (CASSANDRA-7238)
 * Make it clear what DTCS timestamp_resolution is used for (CASSANDRA-11041)
 * Gossiper#isEnabled is not thread safe (CASSANDRA-11116)
 * Avoid major compaction mixing repaired and unrepaired sstables in DTCS (CASSANDRA-11113)
 * test_bulk_round_trip_blogposts is failing occasionally (CASSANDRA-10938)
 * Add a -j parameter to scrub/cleanup/upgradesstables to state how
   many threads to use (CASSANDRA-11179)


2.1.13
 * Fix isJoined return true only after becoming cluster member (CASANDRA-11007)